--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,10 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 - jekyll-relative-links
+
+relative_links:
+  enabled:     true
+  collections: false
+  
 title: [Pän::The Board]
 description: [Go board project]
